# scalping-strategy

./: .gitignore  API_KEY_SETUP_GUIDE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODEBASE_ORGANIZATION.md  EUR_USD_12month_equity.csv  EUR_USD_12month_summary.txt  EUR_USD_12month_trades.csv  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_PLAN.md  PROJECT_STATUS.md  README.md  SWING_ANALYSIS.md  UNIFIED_STRATEGY_GUIDE.md  ai_cost_tracker.py  alert_manager.py  analyze_logs.py  backtest_equity_curve.csv  backtest_trades.csv  backtester.py  bid_ask_pricing.py  com.trading.scalping.plist  comprehensive_backtest.py  config.example.ini  economic_calendar.py  enhanced_scalping_strategy.py  example_backtest.py  journal_analytics.py  journaled_strategy.py  multi_timeframe_data.py  multi_timeframe_strategy.py  news_aware_strategy.py  phase3_strategy.py  pip_calculator.py  pyproject.toml  rsi_logic_fix.md  run_during_market_hours.py  (+23 more)
backend/: api.py  log_parser.py
backtests/: swing_backtest.py
core/: enhanced_scalping_strategy.py  trading_agents.py
docs/: CRITICAL_ANALYSIS.md  ECONOMIC_CALENDAR_INTEGRATION.md  EXECUTIVE_SUMMARY.md  FIXES_IMPLEMENTED.md  INDEX.md  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_3_IMPLEMENTATION_PLAN.md  TRADE_JOURNALING.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
modules/: parameter_optimizer.py  risk_management.py  sentiment_analyzer.py  trade_journal.py  walk_forward_optimizer.py
strategies/: scalping_strategy.py  swing_strategy_optimized.py  (+1 more)
(+22 files in other folders)
